Table: Beneficios Proyectos Energéticos

--- a/Prueba_técnica.ipynb
+++ b/Prueba_técnica.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN85Q8/dgS1bPf5m+RMSekD",
+      "authorship_tag": "ABX9TyMYgidp0FG/QNfcTmgWrRl8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,33 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/brauliomendez/prueba-sostenibilidad/blob/main/Prueba_t%C3%A9cnica.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!unzip SostenibilidadEmpresarial.zip"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Lc31S9VCPRzm",
+        "outputId": "e7224cc3-3a8f-4f63-db8d-459b4d2e47f3"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Archive:  SostenibilidadEmpresarial.zip\n",
+            "   creating: SostenibilidadEmpresarial/\n",
+            "  inflating: SostenibilidadEmpresarial/Empresas_Sostenibilidad.csv  \n",
+            "  inflating: SostenibilidadEmpresarial/Proyectos_Energeticos.csv  \n",
+            "  inflating: SostenibilidadEmpresarial/Regulaciones_Ambientales.csv  \n"
+          ]
+        }
       ]
     },
     {
@@ -82,42 +109,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# Carga de los datos"
-      ],
-      "metadata": {
-        "id": "1nRJynOgMJE5"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!unzip SostenibilidadEmpresarial.zip"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Lc31S9VCPRzm",
-        "outputId": "37ad6205-f8bd-4802-d816-f7429e4266da"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Archive:  SostenibilidadEmpresarial.zip\n",
-            "   creating: SostenibilidadEmpresarial/\n",
-            "  inflating: SostenibilidadEmpresarial/Empresas_Sostenibilidad.csv  \n",
-            "  inflating: SostenibilidadEmpresarial/Proyectos_Energeticos.csv  \n",
-            "  inflating: SostenibilidadEmpresarial/Regulaciones_Ambientales.csv  \n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "spark = SparkSession.builder.appName(\"PruebaTecnica\").getOrCreate()"
@@ -127,6 +118,15 @@
       },
       "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Carga de los datos"
+      ],
+      "metadata": {
+        "id": "1nRJynOgMJE5"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1132,6 +1132,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Se cargan de nuevo los datos para no depender de las ejecuciones anteriores."
+      ],
+      "metadata": {
+        "id": "gAcEolFtI7wx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "companies = spark.read.csv(\"SostenibilidadEmpresarial/Empresas_Sostenibilidad.csv\", header=True, inferSchema=True)\n",
+        "projects = spark.read.csv(\"SostenibilidadEmpresarial/Proyectos_Energeticos.csv\", header=True, inferSchema=True)\n",
+        "regulations = spark.read.csv(\"SostenibilidadEmpresarial/Regulaciones_Ambientales.csv\", header=True, inferSchema=True)"
+      ],
+      "metadata": {
+        "id": "VaXm0wA3Iyhl"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Se juntan los datos de empresas y proyectos."
       ],
       "metadata": {
@@ -1141,22 +1163,22 @@
     {
       "cell_type": "code",
       "source": [
-        "data_1 = companies.join(\n",
+        "companies_and_projects = companies.join(\n",
         "    projects,\n",
         "    on=\"empresa_id\",\n",
         "    how=\"left\"\n",
         ")\n",
         "\n",
-        "data_1.show(5)"
+        "companies_and_projects.show(5)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "EzNe8NTfvcjY",
-        "outputId": "8c67cf74-95ff-4e48-e4af-bbdc953cbd91"
+        "outputId": "0173740a-770d-438e-91ed-c62920b7d86b"
       },
-      "execution_count": 34,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -1189,7 +1211,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data_2 = data_1.groupBy(\"empresa_id\").agg(\n",
+        "companies_net_emissions = companies_and_projects.groupBy(\"empresa_id\").agg(\n",
         "    F.first(\"nombre\").alias(\"nombre\"),\n",
         "    F.first(\"pais\").alias(\"pais\"),\n",
         "    F.first(\"emisiones_co2\").alias(\"emisiones_co2\"),\n",
@@ -1197,23 +1219,23 @@
         ")\n",
         "\n",
         "# Se substituyen nulls por 0\n",
-        "data_2 = data_2.fillna({\"total_reduccion_emisiones\": 0.0})\n",
+        "companies_net_emissions = companies_net_emissions.fillna({\"total_reduccion_emisiones\": 0.0})\n",
         "\n",
-        "data_2 = data_2.withColumn(\n",
+        "companies_net_emissions = companies_net_emissions.withColumn(\n",
         "    \"emisiones_netas\",\n",
         "    F.round(F.col(\"emisiones_co2\") - F.col(\"total_reduccion_emisiones\"), 2)\n",
         ")\n",
         "\n",
-        "data_2.show(5)"
+        "companies_net_emissions.show(5)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "aQmZfouuvoqx",
-        "outputId": "86403d3f-d789-4507-a06d-e440fc0668ec"
+        "outputId": "53879d86-828c-443a-c112-f017ffb9d612"
       },
-      "execution_count": 35,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -1261,9 +1283,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rHLIvR1g117K",
-        "outputId": "7b2fcbdc-9d28-4159-907d-3b2293980b6c"
+        "outputId": "80d5c621-8568-41e0-a7ea-c4362fd9e822"
       },
-      "execution_count": 36,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1296,22 +1318,22 @@
     {
       "cell_type": "code",
       "source": [
-        "data_3 = data_2.join(\n",
+        "companies_and_regulations = companies_net_emissions.join(\n",
         "    regulations_most_restrictive,\n",
         "    on=\"pais\",\n",
         "    how=\"left\"\n",
         ").drop(\"pais\", \"emisiones_co2\", \"total_reduccion_emisiones\", \"subsidios_renovables\")\n",
         "\n",
-        "data_3.show(5)"
+        "companies_and_regulations.show(5)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Db7gwk0Rx_Z8",
-        "outputId": "c2bc6784-6e97-4d0d-c9e9-67b8a8bc76cb"
+        "outputId": "5753e332-5e0c-4b19-9e1a-2ce302c4c69d"
       },
-      "execution_count": 37,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -1344,12 +1366,10 @@
     {
       "cell_type": "code",
       "source": [
-        "data_4 = data_3.withColumn(\n",
+        "companies_and_regulations = companies_and_regulations.withColumn(\n",
         "    \"complies_with_regulation\",\n",
         "    F.col(\"emisiones_netas\") < F.col(\"limite_emisiones\")\n",
-        ")\n",
-        "\n",
-        "data_4 = data_4.withColumn(\n",
+        ").withColumn(\n",
         "    \"exceso_emisiones\",\n",
         "    F.when(\n",
         "        ~F.col(\"complies_with_regulation\"),\n",
@@ -1357,16 +1377,16 @@
         "    ).otherwise(F.lit(0))\n",
         ")\n",
         "\n",
-        "data_4.show(20)"
+        "companies_and_regulations.show(20)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jQzb8hI8-P-z",
-        "outputId": "e516af52-35f8-4500-a2ac-69b8b428497d"
+        "outputId": "5486380b-a5d7-42e5-c1cd-cd3d74431d4c"
       },
-      "execution_count": 38,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -1414,21 +1434,21 @@
     {
       "cell_type": "code",
       "source": [
-        "data_5 = data_4.withColumn(\n",
+        "environmental_impact = companies_and_regulations.withColumn(\n",
         "    \"costo_impuesto\",\n",
         "    F.round(F.col(\"exceso_emisiones\") * F.col(\"impuesto_carbono\"), 2)\n",
         ").drop(\"exceso_emisiones\")\n",
         "\n",
-        "data_5.show(20)"
+        "environmental_impact.show(20)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pfEL-0BMB5vS",
-        "outputId": "0f64a3fe-399f-49da-ba92-e2d59a3dc3f5"
+        "outputId": "68fc38f9-e51d-4c32-be32-a52783171459"
       },
-      "execution_count": 41,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -1476,21 +1496,21 @@
     {
       "cell_type": "code",
       "source": [
-        "result_1 = data_5.withColumn(\n",
+        "environmental_impact = environmental_impact.withColumn(\n",
         "    \"cumple_normativa\",\n",
         "    F.col(\"complies_with_regulation\").cast(\"int\")\n",
         ").drop(\"complies_with_regulation\")\n",
         "\n",
-        "result_1.show(20)"
+        "environmental_impact.show(20)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kU9bHahxE1OH",
-        "outputId": "c78bf8f7-4585-41b7-a538-a7d9ea58405d"
+        "outputId": "8fe75045-9efd-4400-b7df-4c29a66a5867"
       },
-      "execution_count": 46,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -1538,16 +1558,16 @@
     {
       "cell_type": "code",
       "source": [
-        "companies.count() == result_1.count()"
+        "companies.count() == environmental_impact.count()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MBQ3i0nOHeKD",
-        "outputId": "0fd61135-b2f1-4fc6-b1ff-b890cc4867c5"
+        "outputId": "ba2a43bd-0334-4327-be0a-029c49828c6f"
       },
-      "execution_count": 47,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1557,7 +1577,109 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Creación de la tabla de `Beneficios Proyectos Energéticos`"
+      ],
+      "metadata": {
+        "id": "GxB2hwEiIbzY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "projects = spark.read.csv(\"SostenibilidadEmpresarial/Proyectos_Energeticos.csv\", header=True, inferSchema=True)"
+      ],
+      "metadata": {
+        "id": "g9p0pOLpIf_E"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Por la lógica de negocio, la tabla resultante tendrá 1 fila por empresa y tipo de energía. Para cada uno de estos conjuntos se suma el costo de los proyectos, la capacidad de generación y las emisiones evitadas. Finalmente se calcula el retorno estimado dividiendo la inversión total entre el total de emisiones evitadas."
+      ],
+      "metadata": {
+        "id": "IcHKKJLAMeFw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "benefits = projects.groupBy(\"empresa_id\", \"tipo_energia\").agg(\n",
+        "    F.round(F.sum(\"costo_proyecto\"), 2).alias(\"total_inversion\"),\n",
+        "    F.round(F.sum(\"capacidad_generacion\"), 2).alias(\"energia_generada_total\"),\n",
+        "    F.round(F.sum(\"reduccion_emisiones\"), 2).alias(\"emisiones_evitadas_total\")\n",
+        ").withColumn(\n",
+        "    \"retorno_estimado\",\n",
+        "    F.round(F.col(\"total_inversion\") / F.col(\"emisiones_evitadas_total\"), 4)\n",
+        ").orderBy(\"empresa_id\", \"tipo_energia\")\n",
+        "\n",
+        "benefits.show(10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QhHjs7WqJo2G",
+        "outputId": "cf55ed4a-8351-4452-ed25-54b55bd0d563"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+--------------+---------------+----------------------+------------------------+----------------+\n",
+            "|empresa_id|  tipo_energia|total_inversion|energia_generada_total|emisiones_evitadas_total|retorno_estimado|\n",
+            "+----------+--------------+---------------+----------------------+------------------------+----------------+\n",
+            "| EMP000000|        Eólica|         375.11|               1962.66|                  606.28|          0.6187|\n",
+            "| EMP000000|Hidroeléctrica|         301.21|               9150.33|                  224.96|          1.3389|\n",
+            "| EMP000001|       Biomasa|           4.58|               7295.54|                 1565.71|          0.0029|\n",
+            "| EMP000004|       Biomasa|         249.27|                948.21|                 3963.83|          0.0629|\n",
+            "| EMP000005|    Geotérmica|         151.59|               3851.69|                 1551.77|          0.0977|\n",
+            "| EMP000005|         Solar|         130.73|                5587.7|                  1965.9|          0.0665|\n",
+            "| EMP000007|       Biomasa|         275.83|               3956.89|                  3201.3|          0.0862|\n",
+            "| EMP000007|        Eólica|         421.88|                9284.1|                   60.84|          6.9343|\n",
+            "| EMP000008|         Solar|          247.0|               4204.26|                 3638.72|          0.0679|\n",
+            "| EMP000010|        Eólica|          16.08|                3844.5|                 3515.75|          0.0046|\n",
+            "+----------+--------------+---------------+----------------------+------------------------+----------------+\n",
+            "only showing top 10 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "benefits.count()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QNJzUF0aTsko",
+        "outputId": "e9df30ac-9993-468f-d59d-30811dfa63ae"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "23218"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
         }
       ]
     }
